z-index fix stop button

--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,7 @@ body {
 
 .stop {
 	position: absolute;
+    z-index: 1000;
 	top: 25%;
 	left: 1%;
 	width: 4%;
